# fyer_algo_trader

./: README.md  analyze_whipsaws.py  audit_bhavcopy.py  backtest.py  backtest_offline.py  backtest_orb.py  backtest_orb_delta.py  backtest_rs_momentum.py  broker_gateway.py  bs_engine.py  compliance.py  config.py  data_feed.py  db_lock.py  debug_fyers_auth.py  download_free_commodities.py  download_mcx.py  download_sectors.py  download_stocks.py  get_token_browser.py  instruments.py  live_sympathy.py  main.py  monitor_theta.py  nse_data_fetcher.py  paper_trader.py  probe_fyers_api.py  pyproject.toml  real_option_fetcher.py  requirements.txt  requirements_platform.txt  risk_manager.py  run_attribution_study.py  run_backtest_with_token.py  run_barbell_backtest.py  run_compare_backtest.py  run_full_backtest.py  run_live_theta.py  run_real_backtest.py  run_real_barbell_verify.py  (+4 more)
algo_platform/: __init__.py  run.py
algo_trader_platform.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
backtest_results_output/: banknifty_2025-06-25_2026-06-20.csv  banknifty_2025-06-25_2026-06-20_CurvatureCreditSpread.csv  banknifty_2025-06-25_2026-06-20_ExpiryShortStrangle.csv  banknifty_2025-06-25_2026-06-20_FixedRR_1to3.csv  banknifty_2025-06-25_2026-06-20_LyapunovCreditSpread.csv  banknifty_2025-06-25_2026-06-20_ZenCreditSpread.csv  banknifty_2025-06-26_2026-06-21.csv  banknifty_2025-06-26_2026-06-21_FixedRR_1to3.csv  banknifty_2025-06-26_2026-06-21_LyapunovCreditSpread.csv  banknifty_2025-06-26_2026-06-21_ZenCreditSpread.csv  nifty_2025-06-25_2026-06-20.csv  (+25 more)
(+656 files in other folders)
